syntax = "proto2";
package heron.proto.system;

option java_package = "org.apache.heron.proto.system";
option java_outer_classname = "Stats";

message StMgrStats {
  // to be defined
}
